--- a/UI/skd-ref-site/src/assets/i18n/de.json
+++ b/UI/skd-ref-site/src/assets/i18n/de.json
@@ -46,7 +46,7 @@
 	"Vegetation": {
 		"Vegetation": "Vegetation",
 		"Flowers": "Blumen",
-		"Plants": "Pflanze",
+		"Plants": "Pflanzen",
 		"PhotoType": "Photo Typ",
 		"Closeup": "Closeup",
 		"Full": "Vollständig",
@@ -65,14 +65,14 @@
 		"AboveOrBelow": "Oberhalb oder unterhalb",
 		"ClassMode": "Klassenmodus",
 		"Class": "Klasse",
-		"Minutes": "Protokoll",
+		"Minutes": "Minuten",
 		"Seconds": "Sekunden",
 		"Hour": "Stunde",
 		"Hours": "Std.",
 		"NoTimers": "Keine Timer",
 		"OnlyMostRecentImages": "Nur kürzlich hinzugefügte Bilder verwenden",
 		"NumberOfImages": "Anzahl der Bilder",
-		"Start": "Anfangen",
+		"Start": "Start",
 		"Time": "Zeit",
 		"Break": "Pause",
 		"NSFW": "NSFW",
@@ -107,7 +107,7 @@
 		"LeftControls": "Links - Vorheriges Bild",
 		"RightControls": "Recht - Nächstes Bild",
 		"SpacebarControls": "Leertaste - Pause",
-		"EscapeControls": "Flucht - Halt",
+		"EscapeControls": "ESC - Halt",
 		"VisitUsOnReddit": "Besuchen Sie uns auf Reddit!",
 		"Next": "Nächstes",
 		"TakeABreak": "Mach eine Pause!",
@@ -116,12 +116,12 @@
 		"Close": "Schließen",
 		"ClassComplete": "Übung abgeschlossen",
 		"NiceWork": "Du hast die Übung erfolgreich abgeschlossen. Gut gemacht!",
-		"MaybeTakeABreak": "Maybe take a little break and check out what people have been up to on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a>"
+		"MaybeTakeABreak": "Nimm dir vielleicht eine kleine Pause und sieh dir an was andere auf <a href='https://www.reddit.com/r/sketchdaily'>dem Subreddit</a> machen!"
 	},
 	"Timers": {
 		"seconds": "{{total}} Sekunden",
 		"minutes": "{{total}} Minuten",
-		"Class mode": "Class mode",
+		"Class mode": "Klassen Modus",
 		"No timers": "Keine Zeitbegrenzung",
 		"30 minutes": "30 Minuten",
 		"1 hour": "1 std",
