--- a/UI/skd-ref-site/src/assets/i18n/ru.json
+++ b/UI/skd-ref-site/src/assets/i18n/ru.json
@@ -62,7 +62,7 @@
 		"Front": "Спереди",
 		"Side": "Сбоку",
 		"Back": "Сзади",
-		"AboveOrBelow": "Выше или ниже",
+		"AboveOrBelow": "Сверху или снизу",
 		"ClassMode": "Режим класса",
 		"Class": "Класс",
 		"Minutes": "Минут",
