--- a/UI/skd-ref-site/src/assets/i18n/zh.json
+++ b/UI/skd-ref-site/src/assets/i18n/zh.json
@@ -10,7 +10,7 @@
 		"Clothing": "衣着",
 		"Clothed": "着衣的",
 		"Nude": "裸体的",
-		"IncludeNSFWImages": "包含不适宜于办公区域展示的图片",
+		"IncludeNSFWImages": "包含工作不宜的图片",
 		"Pose": "姿势",
 		"Action": "动态",
 		"Stationary": "静态",
