--- a/UI/skd-ref-site/src/assets/i18n/et.json
+++ b/UI/skd-ref-site/src/assets/i18n/et.json
@@ -1,132 +1,132 @@
 {
-    "Welcome": {
-        "Hello": "Tere!",
-        "LookingForSomethingElseToDraw": "Otsite midagi muud joonistamiseks?",
-        "JoinTheFun": "Liitu naljaga!",
-        "Welcome": "Tere tulemast SketchDaily-i viite asja juurde."
-    },
-    "FullBody": {
-        "FullBody": "Terve Keha",
-        "Clothing": "Riided",
-        "Pose": "Poos",
-        "All": "Kõik",
-        "Clothed": "Riietatud",
-        "Nude": "Alasti",
-        "Stationary": "Paigal",
-        "Action": "Tegevus",
-        "IncludeNSFWImages": "Sisalda NSFW pilte"
-    },
-    "BodyPart": {
-        "Hand": "Käed",
-        "Foot": "Jalad",
-        "Head": "Pead",
-        "All": "Kõik",
-        "BodyPart": "Kehaosa"
-    },
-    "Animal": {
-        "Animal": "Loom",
-        "Bird": "Lind",
-        "Fish": "Kala",
-        "Living": "Elus",
-        "SkeletonOrBones": "Luustik või kondid",
-        "Bug": "Putukas",
-        "All": "Kõik",
-        "Species": "Liik",
-        "ReptileOrAmphibian": "Roomaja või Kahepaikne",
-        "Category": "Kategooria",
-        "Mammal": "Imetaja"
-    },
-    "Structure": {
-        "House": "Maja",
-        "Other": "Teine",
-        "All": "Kõik",
-        "Structure": "Ehitis",
-        "Building": "Hoone"
-    },
-    "Vegetation": {
-        "Flowers": "Lilled",
-        "Full": "Täis",
-        "All": "Kõik",
-        "Vegetation": "Taimestik",
-        "Plants": "Taimed",
-        "PhotoType": "Fototüüp",
-        "Closeup": "Lähivõte"
-    },
-    "Filters": {
-        "All": "Kõik",
-        "Type": "Tüüp",
-        "Gender": "Sugu",
-        "Male": "Mees",
-        "Female": "Naine",
-        "Front": "Esiosa",
-        "Minutes": "minutid",
-        "Seconds": "sekundid",
-        "Hour": "tund",
-        "Hours": "tunnid",
-        "Start": "Alustus",
-        "Time": "Aeg",
-        "true": "Tõene",
-        "false": "Vale",
-        "NSFW": "NSFW",
-        "Break": "Puhkus",
-        "NoTimers": "Taimerita",
-        "ClassMode": "Klassirežiim",
-        "Class": "Klass",
-        "AboveOrBelow": "Ülal või all",
-        "Side": "Külg",
-        "Back": "Seljaosa",
-        "View": "Vaade",
-        "NumberOfImages": "Piltide arv",
-        "OnlyMostRecentImages": "Kasuta ainult hiljutisi pilte"
-    },
-    "Header": {
-        "YourImages": "Sinu pildid",
-        "AddImages": "Lisa pilte",
-        "ManageImages": "Hallata pilte",
-        "News": "Uudised",
-        "LogIn": "Logi sisse",
-        "LogOut": "Logi välja",
-        "Title": "r/SketchDaily osundid",
-        "Logs": "Logid"
-    },
-    "ImageViewer": {
-        "LeftControls": "Vasak - Eelmine pilt",
-        "RightControls": "Parem - Järgmine pilt",
-        "SpacebarControls": "Tühikuklahv - Paus",
-        "EscapeControls": "Esc - Stopp",
-        "Next": "Järgmine",
-        "ClassComplete": "Klass valmitud",
-        "Close": "Sulge",
-        "TakeABreak": "Puhka!",
-        "ItsTimeForABreak": "Nüüd on puhkuse aeg. Klass jätkub, kui taimer jõuab 0-ni.",
-        "VisitUsOnReddit": "Külastage meid Redditil!",
-        "About": "Meist",
-        "TermsOfUse": "Kasutustingimused",
-        "Source": "Allikas",
-        "Model": "Modell",
-        "Photographer": "Fotograaf",
-        "DateAdded": "Kuupäev Lisatud",
-        "Timer": "Taimer",
-        "Paused": "Pausis",
-        "NoMoreImages": "Enam pole teie filtritele vastavaid pilte. Vabandust!",
-        "ImageInfo": "Pildi info",
-        "Classifications": "Klassifikatsioonid",
-        "NiceWork": "Kena töö, sa lõpetasid klassi!",
-        "MaybeTakeABreak": "Võib-olla teeks väikese pausi ja vaadake, mis teised on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a> teinud! "
-    },
-    "Timers": {
-        "seconds": "{{total}} sekundit",
-        "minutes": "{{total}} minutit",
-        "30 minutes": "30 minutit",
-        "1 hour": "1 tund",
-        "2 hours": "2 tundi",
-        "3 hours": "3 tundi",
-        "6 hours": "6 tundi",
-        "No timers": "Taimerita",
-        "Class mode": "Klassirežiim"
-    },
-    "News": {
-        "WhatsNew": "Mis on uut",
-        "Announcement": "Teade"
-    }
+	"Welcome": {
+		"Hello": "Tere!",
+		"LookingForSomethingElseToDraw": "Otsite joonistamiseks midagi muud?",
+		"JoinTheFun": "Liitu lõbuga!",
+		"Welcome": "Tere tulemast SketchDaily pildieeskujude lehele."
+	},
+	"FullBody": {
+		"FullBody": "Terve Keha",
+		"Clothing": "Riided",
+		"Pose": "Poos",
+		"All": "Kõik",
+		"Clothed": "Riietatud",
+		"Nude": "Alasti",
+		"Stationary": "Paigalseisev",
+		"Action": "Tegevuses",
+		"IncludeNSFWImages": "Sisaldab NSFW pilte"
+	},
+	"BodyPart": {
+		"Hand": "Käed",
+		"Foot": "Jalad",
+		"Head": "Pead",
+		"All": "Kõik",
+		"BodyPart": "Kehaosa"
+	},
+	"Animal": {
+		"Animal": "Loom",
+		"Bird": "Lind",
+		"Fish": "Kala",
+		"Living": "Elus",
+		"SkeletonOrBones": "Luustik või kondid",
+		"Bug": "Putukas",
+		"All": "Kõik",
+		"Species": "Liik",
+		"ReptileOrAmphibian": "Roomaja või Kahepaikne",
+		"Category": "Kategooria",
+		"Mammal": "Imetaja"
+	},
+	"Structure": {
+		"House": "Maja",
+		"Other": "Muu",
+		"All": "Kõik",
+		"Structure": "Ehitis",
+		"Building": "Hoone"
+	},
+	"Vegetation": {
+		"Flowers": "Lilled",
+		"Full": "Täis",
+		"All": "Kõik",
+		"Vegetation": "Taimestik",
+		"Plants": "Taimed",
+		"PhotoType": "Fototüüp",
+		"Closeup": "Lähivõte"
+	},
+	"Filters": {
+		"All": "Kõik",
+		"Type": "Tüüp",
+		"Gender": "Sugu",
+		"Male": "Mees",
+		"Female": "Naine",
+		"Front": "Eestvaade",
+		"Minutes": "minutid",
+		"Seconds": "sekundid",
+		"Hour": "tund",
+		"Hours": "tunnid",
+		"Start": "Alusta",
+		"Time": "Aeg",
+		"true": "Tõene",
+		"false": "Vale",
+		"NSFW": "NSFW (pole kõigile sobilik)",
+		"Break": "Vaheaeg",
+		"NoTimers": "Taimerita",
+		"ClassMode": "Klassiviis",
+		"Class": "Klass",
+		"AboveOrBelow": "Ülalt- või altvaade",
+		"Side": "Külgvaade",
+		"Back": "Tagantvaade",
+		"View": "Vaade",
+		"NumberOfImages": "Piltide arv",
+		"OnlyMostRecentImages": "Kasuta ainult hiljutisi pilte"
+	},
+	"Header": {
+		"YourImages": "Sinu pildid",
+		"AddImages": "Lisa pilte",
+		"ManageImages": "Halda pilte",
+		"News": "Uudised",
+		"LogIn": "Logi sisse",
+		"LogOut": "Logi välja",
+		"Title": "r/SketchDaily pildid",
+		"Logs": "Logid"
+	},
+	"ImageViewer": {
+		"LeftControls": "Vasak - Eelmine pilt",
+		"RightControls": "Parem - Järgmine pilt",
+		"SpacebarControls": "Tühikuklahv - Paus",
+		"EscapeControls": "Esc - Stopp",
+		"Next": "Järgmine",
+		"ClassComplete": "Klass läbitud",
+		"Close": "Sulge",
+		"TakeABreak": "Puhkepaus!",
+		"ItsTimeForABreak": "Nüüd on puhkuse aeg. Klass jätkub, kui taimer jõuab 0-ni.",
+		"VisitUsOnReddit": "Külastage meid Redditis!",
+		"About": "Meist",
+		"TermsOfUse": "Kasutustingimused",
+		"Source": "Allikas",
+		"Model": "Modell",
+		"Photographer": "Fotograaf",
+		"DateAdded": "Lisamise kuupäev",
+		"Timer": "Taimer",
+		"Paused": "Pausil",
+		"NoMoreImages": "Enam pole teie filtritele vastavaid pilte. Vabandust!",
+		"ImageInfo": "Pildi info",
+		"Classifications": "Klassifikatsioonid",
+		"NiceWork": "Kena töö, Sa lõpetasid klassi!",
+		"MaybeTakeABreak": "Ehk teeks pisikese pausi ja heidaks pilgu, mida teised on <a href='https://www.reddit.com/r/sketchdaily'>the subreddit!</a> teinud! "
+	},
+	"Timers": {
+		"seconds": "{{total}} sekundit",
+		"minutes": "{{total}} minutit",
+		"30 minutes": "30 minutit",
+		"1 hour": "1 tund",
+		"2 hours": "2 tundi",
+		"3 hours": "3 tundi",
+		"6 hours": "6 tundi",
+		"No timers": "Taimerita",
+		"Class mode": "Klassirežiim"
+	},
+	"News": {
+		"WhatsNew": "Mis on uut",
+		"Announcement": "Teade"
+	}
 }
